--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-background-timer": "^2.4.1",
     "react-native-dash": "^0.0.11",
     "react-native-date-picker": "^3.3.1",
+    "react-native-device-info": "^8.4.5",
     "react-native-flash-message": "^0.1.23",
     "react-native-geocoding": "^0.5.0",
     "react-native-geolocation-service": "^5.2.0",
