--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "jest",
     "lint": "eslint .",
     "bundleRelease": "cd android && ./gradlew clean && ./gradlew bundleRelease",
-    "assembleRelease": "cd android && ./gradlew clean && ./gradlew assembleRelease"
+    "assembleRelease": "cd android && ./gradlew clean && ./gradlew assembleRelease",
+    "reverse": "adb reverse tcp:8081 tcp:8081"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.2",
