--- a/ios/bandhifycustomer/Info.plist
+++ b/ios/bandhifycustomer/Info.plist
@@ -60,6 +60,8 @@
 	<string>This will enable the nearby location functionality to get nearest shops. To start using the app, choose “Allow” so the app can read your location.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>This will enable the nearby location functionality to get nearest shops. To start using the app, choose “Allow” so the app can find your location.</string>
+	<key>NSLocationUsageDescription</key>
+	<string>This will enable the nearby location functionality to get nearest shops. To start using the app, choose “Allow” so the app can find your location.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>$(PRODUCT_NAME) photo library use</string>
 	<key>UIAppFonts</key>
